<resources>
    <string name="app_name">InspiringPersons</string>

    <string name="menutitle_showInspiringPersons">Inspiring Persons</string>
    <string name="title_activity_inspiring_persons">InspiringPersonsActivity</string>
    <string name="et_image_link_hint">Person image link</string>
    <string name="etDescriptionHint">Person description</string>
    <string name="etBirthDateHint">Birth date </string>
    <string name="btnSavePerson">Save person</string>
    <string name="etDeathDateHint">Death date</string>
    <string name="etQuoteHint">Quotes from a person</string>
    <string name="btnAddQuote">Add quote</string>
    <string name="home_title_birth_date">Birth date </string>
    <string name="home_title_death_date">Death date</string>
    <string name="toast_fill_all">Fill all parameters!</string>
    <string name="image_person">Person image</string>
    <string name="textview_person_dates"> %s - %s</string>
    <string name="toast_empty_quote"> No quotes </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_button_description">Button for editing</string>
    <string name="delete_button_description">Button for deleting</string>
    <string name="title_activity_update_person">UpdatePersonActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>