<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UpdatePersonActivity">


    <LinearLayout
        android:id="@+id/linear_layout_person_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <EditText
            android:id="@+id/etImageLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="image link"
            android:ems="10"
            android:hint="@string/et_image_link_hint"
            android:inputType="textNoSuggestions"
            android:maxLength="64" />

        <EditText
            android:id="@+id/addedit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="description"
            android:ems="10"
            android:hint="@string/etDescriptionHint"
            android:inputType="textMultiLine"
            android:maxLength="256" />

        <EditText
            android:id="@+id/etBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:ems="10"
            android:inputType="date"
            android:importantForAutofill="no"
            android:hint="@string/etBirthDateHint"
            />

        <EditText
            android:id="@+id/etDeathDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:focusable="false"
            android:inputType="date"
            android:ems="10"
            android:hint="@string/etDeathDateHint"
            />



        <LinearLayout
            android:layout_width="match_parent"
            android:ems="10"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etQuote"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxLength="256"
                android:hint="@string/etQuoteHint"
                />

            <Button
                android:id="@+id/btnAddQuote"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/btnAddQuote"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@android:drawable/ic_menu_save"
            android:text="@string/btnSavePerson"
            android:drawableLeft="@android:drawable/ic_menu_save" />


        <ListView
            android:id="@+id/lvPersonQuotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:scrollbars="vertical"
            />

    </LinearLayout>





</FrameLayout>