<?xml version="1.0" encoding="utf-8"?>

<com.chauthai.swipereveallayout.SwipeRevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small"
    app:dragEdge="right"
    app:mode="same_level">

    <!--Swipe Layout-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/ibEdit"
            android:layout_width="@dimen/imagesize_medium"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_edit_white_24"
            android:gravity="center"
            android:background="@color/swipe_brown"
            android:contentDescription="@string/edit_button_description"

            />

        <ImageButton
            android:id="@+id/ibDelete"
            android:src="@drawable/ic_baseline_delete_24"
            android:layout_width="@dimen/imagesize_medium"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/swipe_red"
            android:contentDescription="@string/delete_button_description"
            />

    </LinearLayout>


    <!-- Main Layout -->
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="@dimen/margin_medium"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/ivPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_person"
        android:scaleType="fitCenter"
        android:src="@drawable/placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvPersonDates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:padding="@dimen/padding_small"
        android:textSize="@dimen/textsize_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPerson"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/tvPersonDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:padding="@dimen/padding_small"
        android:textSize="@dimen/textsize_xlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPersonDates"
        tools:text="@tools:sample/lorem/random" />

</androidx.constraintlayout.widget.ConstraintLayout>


</com.chauthai.swipereveallayout.SwipeRevealLayout>